# rain.orderbook

./: .devcontainer.json  .env.example  .envrc  .eslintignore  .eslintrc.js  .gas-snapshot  .gitignore  .gitmodules  404.html  AGENTS.md  CANARY.md  CLAUDE.md  CURRENT_TODOS.md  Cargo.toml  LICENSE  NOTES.md  README.md  REUSE.toml  SETUP.md  VIRTUAL_RAINDEX_CLIENT_PLAN.md  VIRTUAL_RAINDEX_IMPLEMENTATION.md  active_orders_query.sql  debug_direct.py  debug_nvda.py  develop-tauri.sh  docker-nix.sh  dune-setup.md  flake.nix  foundry.toml  index.html  package-lock.json  package.json  pointers.sh  prep-all-docker.sh  prep-all.sh  prep-base.sh  prep-tauri.sh  prep-webapp.sh  print.html  reproduce_issue.js  (+7 more)
cli/: CHANGELOG.md  Cargo.toml  build.rs  default.nix  shell.nix
cli/gui/: .npmignore  README.md  codegen.ts  package-lock.json  package.json  shell.nix  svelte.config.js
cli/src/: lib.rs  main.rs
cli/src/cli/: build.rs  magic.rs  mod.rs  order.rs  output.rs  registry.rs  schema.rs  solc.rs  trace.rs  validate.rs
cli/src/gasoracle/: mod.rs
cli/src/meta/: magic.rs  mod.rs  normalize.rs
cli/src/orderbook/: addorder.rs  deposit.rs  mod.rs  removeorder.rs  withdraw.rs
cli/src/rpc/: deposit.rs  mod.rs
cli/src/solc/: mod.rs
cli/src/subgraph/: mod.rs  showorder.rs
cli/src/tokens/: mod.rs
cli/src/transaction/: mod.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs
crates/bindings/: ARCHITECTURE.md  Cargo.toml
crates/bindings/src/: js_api.rs  lib.rs  provider.rs  wasm_traits.rs
crates/bindings/tests/: add_order_test.rs  approve_test.rs  deposit_test.rs  withdraw_test.rs
crates/cli/: .gitignore  Cargo.toml  build.rs  settings.yaml
crates/cli/src/: balance.rs  call.rs  decode_events.rs  events_to_sql.rs  execute.rs  fetch_events.rs  lib.rs  main.rs  output.rs  status.rs  subgraph.rs  tables-v2.sql  tables.sql  telegram_notifications.rs  transaction.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/common/: ARCHITECTURE.md  Cargo.toml
crates/common/src/: abi_error.rs  add_order.rs  csv.rs  decode_abi_error.rs  deposit.rs  dotrain_add_order_lsp.rs  dotrain_order.rs  erc20.rs  error.rs  fork.rs  forked_evm_cache.rs  front_matter.rs  frontmatter.rs  hyper_rpc.rs  lib.rs  lsp_services.rs  meta.rs  oracle.rs  parsed_meta.rs  provider.rs  rainlang.rs  remove_order.rs  replays.rs  retry.rs  rpc_client.rs  subgraph.rs  take_orders.rs  test_helpers.rs  trace.rs  transaction.rs  transaction_error.rs  unit_tests.rs  withdraw.rs  withdraw_multiple.rs  words.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs  local_evm.rs
crates/js_api/: ARCHITECTURE.md  Cargo.toml
crates/js_api/src/: common.rs  config.rs  lib.rs  metadata.rs  multicall.rs  order.rs  rainlang.rs  registry.rs  result.rs
crates/math/: ARCHITECTURE.md  Cargo.toml
crates/math/src/: js_api.rs  lib.rs  su256.rs
crates/quote/: ARCHITECTURE.md  Cargo.toml
crates/quote/src/: error.rs  fork.rs  js_api.rs  lib.rs  main.rs  oracle.rs  order_quotes.rs  quote.rs  quote_debug.rs  rpc.rs
crates/rest_api/: Cargo.toml
crates/rest_api/src/: error.rs  lib.rs  main.rs
crates/settings/: ARCHITECTURE.md  Cargo.toml
crates/settings/src/: accounts.rs  blocks.rs  caching.rs  chart.rs  config.rs  config_source.rs  deployer.rs  deployment.rs  gui.rs  lib.rs  local_db.rs  local_db_manifest.rs  local_db_remotes.rs  local_db_sync.rs  merge.rs  metaboard.rs  network.rs  network_bindings.rs  new_config.rs  order.rs  order_builder.rs  orderbook.rs  parse.rs  plot_source.rs  raindex.rs  raindex_version.rs  rainlang.rs  registry.rs  remote_networks.rs  remote_tokens.rs  scenario.rs  sentry.rs  spec_version.rs  string_structs.rs  subgraph.rs  tauri.rs  test.rs  token.rs  unit_test.rs  utils.rs
crates/subgraph/: Cargo.toml  build.rs
crates/subgraph/queries/: multiOrderDetail.graphql  order.graphql  orderClearsList.graphql  orderDetail.graphql  (+10 more)
crates/test_fixtures/: Cargo.toml
crates/transaction/: Cargo.toml
crates/virtual-raindex/: Cargo.toml  README.md
crates/wasm_wrapper/: Cargo.toml
orderbook-rs/: Cargo.toml
orderbook-rs/src/: errors.rs  lib.rs  registry.rs
subgraph/: .gitignore  .prettierignore  Cargo.toml  README.md  a.json  a.nix  aver.txt  deployer.rs  deposit.ts  docker-compose.ci.yml  docker-compose.yml  flake.nix  networks.json  package-lock.json  package.json  schema.graphql  shell.nix  subgraph.template.yaml  subgraph.yaml  test.rs  tsconfig.json
subgraph/abis/: OrderBook.json  ReserveToken.json
subgraph/cli/: main.rs
subgraph/config/: localhost.json  mainnet.json  matic.json  mumbai.json  mumbai_ob_v3.json  nhsbot_polygon.json  polygon.json
subgraph/docker/: docker-compose.yaml
subgraph/src/: clear.ts  deposit.ts  erc20.ts  float.ts  handlers.ts  mappings.ts  meta.ts  order.ts  orderBook.ts  orderJsonString.ts  orderbook.ts  raindex.ts  takeorder.ts  trade.ts  tradevaultbalancechange.ts  transaction.ts  utils.ts  vault.ts  withdraw.ts
subgraph/test/: 0_initialization.test.ts  account.test.ts  bounty.test.ts  erc20.test.ts  io.test.ts  order.test.ts  orderBook.deposit.test.ts  orderBook.test.ts  orderClear.test.ts  orderClearStateChange.test.ts  takeOrderEntity.test.ts  tokenVault.test.ts  utils.ts  vault.test.ts  vaultDeposit.test.ts  vaultWithdraw.test.ts
subgraph/tests/: ReserveToken.json  cli.rs  deploy_orderbook.rs  deposit-entity.test.ts  deposit.test.ts  entities.rs  erc20.test.ts  event-mocks.test.ts  float.test.ts  order.test.ts  orderbook_entity.rs  takeorder.test.ts  trade.test.ts  tradevaultbalancechange.test.ts  transaction.test.ts  vault.test.ts  withdrawal-entity.test.ts  withdrawal.test.ts
subgraph/utils/: index.ts
tauri-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.template.json
tauri-e2e-test/: Cargo.toml  README.md
tauri-e2e-test/tests/: active_network_tests.rs  active_orderbook_tests.rs  nested_scenarios_tests.rs  settings_tests.rs  sidebar_tests.rs  startup_test.rs
tauri-test-rs/: Cargo.toml
tauri-test-rs/src/: main.rs
tauri-test-rs/tests/: startup_test.rs
(+2229 files in other folders)
