[workspace]
members = ["crates/*"]
exclude = ["tauri-app/src-tauri", "lib/rain.interpreter", "lib/rain.metadata"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "LicenseRef-DCL-1.0"
version = "0.0.0-alpha.0"
homepage = "https://github.com/rainprotocol/rain.orderbook"

[workspace.dependencies]
foundry-block-explorers = "0.2.6"
alloy = { version = "0.1.4" }
alloy-ethers-typecast = { git = "https://github.com/rainlanguage/alloy-ethers-typecast", rev = "adda117b1f43e1a4dfa012299e71f2b0e73f46f4" }
anyhow = "1.0.70"
async-trait = "0.1.77"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
once_cell = "1.17.1"
reqwest = { version = "0.12.5", features = ["json"] }
rust-bigint = "1.2.0"
serde = "1.0.200"
futures = "0.3.17"
serde_bytes = "0.11.9"
serde_json = "1.0.112"
serde_yaml = "0.9.32"
tokio = { version = "1.28.0" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.5.0"
comfy-table = "7.1.0"
cynic-codegen = { version = "3.4.0", features = ["rkyv"] }
cynic = "3.7.3"
chrono = "0.4.31"
thiserror = "1.0.56"
strict-yaml-rust = "0.1.2"
dotrain = "6.0.1-alpha.24"
dotrain-lsp = "6.0.1-alpha.24"
rain-metadata = { path = "lib/rain.interpreter/lib/rain.metadata/crates/cli" }
rain-metadata-bindings = { path = "lib/rain.interpreter/lib/rain.metadata/crates/bindings" }
rain-metaboard-subgraph = { path = "lib/rain.interpreter/lib/rain.metadata/crates/metaboard" }
rain_interpreter_bindings = { path = "lib/rain.interpreter/crates/bindings" }
rain_interpreter_dispair = { path = "lib/rain.interpreter/crates/dispair" }
rain_interpreter_parser = { path = "lib/rain.interpreter/crates/parser" }
rain-interpreter-eval = { path = "lib/rain.interpreter/crates/eval" }
csv = "1.3.0"
insta = { version = "1.34.0" }
proptest = "1.4.0"
derive_builder = "0.20.0"
thirtyfour = "0.31.0"
test-context = "0.3.0"
portpicker = "0.1.1"
rain-erc = { git = "https://github.com/rainlanguage/rain.erc", rev = "0106e645ebd49334addc698c5aad9a85370eb54d" }
rain-error-decoding = { git = "https://github.com/rainlanguage/rain.error", rev = "fa0cc05a8dbf0f167a2392255a8b509309e9da46" }
wasm-bindgen-utils = "0.0.8"
tempfile = "3.20.0"

[workspace.dependencies.rain_orderbook_bindings]
path = "crates/bindings"

[workspace.dependencies.rain_orderbook_common]
path = "crates/common"

[workspace.dependencies.rain_orderbook_cli]
path = "crates/cli"

[workspace.dependencies.rain_orderbook_subgraph_client]
path = "crates/subgraph"

[workspace.dependencies.rain_orderbook_app_settings]
path = "crates/settings"

[workspace.dependencies.rain_orderbook_quote]
path = "crates/quote"

[workspace.dependencies.rain_orderbook_test_fixtures]
path = "crates/test_fixtures"

[workspace.dependencies.rain_orderbook_math]
path = "crates/math"

[workspace.dependencies.rain_orderbook_js_api]
path = "crates/js_api"
