[package]
name = "rain_ob"
version = "0.0.4"
edition = "2021"
license = "CAL-1.0"
description = "Rain OrderBook Rust Crate."
homepage = "https://github.com/rainlanguage/rain.orderbook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
reqwest = { version = "0.11.17", features = ["json"] }
rust-bigint = "1.2.0"
serde = "1.0.160"
serde_bytes = "0.11.9"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ethers = "2.0.7"
ethers-signers = { version = "2.0.8", features = ["ledger"] }
alloy-json-abi = { version = "0.5.3" }
alloy-primitives = { version = "0.5.3" }
alloy-sol-types = { version = "0.5.3", features = ["json"] }
alloy-dyn-abi = { version = "0.5.3"}
hex = "0.4.3"
rustc-hex = "2.1.0"
url = "2.5.0"
thiserror = "1.0.52"