[package]
name = "subgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
hex = "0.4.3"
serde_json = "1.0.99"
serde = "1.0.160"
serde_bytes = "0.11.9"
anyhow = "1.0.70"
mustache = "0.9.0"
reqwest = { version = "0.11.17", features = ["json"] }
rust-bigint = "1.2.0"
graphql_client = "0.13.0"
web3 = "0.19.0"