[package]
name = "subgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.70"
rain_cli_subgraph = { git = "https://github.com/rainlanguage/rain.subgraph-cli.git", rev = "d3aabe1811c642dc8d9890f127f0100f71d0ebbe" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
graphql_client = "0.13.0"
rust-bigint = "1.2.0"
serde = "1.0.193"
ethers = { version = "2.0", features = ["legacy"] }
reqwest = "0.11.22"
lazy_static = "1.4.0"
once_cell = "1.18.0"
hex = "0.4.3"
serde_json = "1.0.108"
