[package]
name = "tauri-e2e-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
thirtyfour = { workspace = true }
tokio = { workspace = true }
test-context = { workspace = true }
serde_json = { workspace = true }
portpicker = { workspace = true }
lazy_static = { workspace = true }