[package]
name = "tauri-test-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = { workspace = true }
tokio = { workspace = true }