[package]
name = "rain_orderbook_analytics"
description = "Rain Orderbook Analytics."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.77"
rain_orderbook_subgraph_client = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
reqwest = { workspace = true }
