[package]
name = "rain_orderbook_bindings"
description = "Bindings for the Rain Orderbook Solidity contracts to Rust types."
version.workspace = true
edition.workspace = true
license.workspace = true
author.workspace = true
homepage.workspace = true

[dependencies]
alloy = { workspace = true, features = ["sol-types", "json"] }
serde = { workspace = true, features = ["derive", "rc"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-utils = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
