[package]
name = "rain_orderbook_cli"
description = "Rain Orderbook CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-ethers-typecast = { workspace = true }
alloy = { workspace = true }
rain_orderbook_subgraph_client = { workspace = true }
rain_orderbook_bindings = { workspace = true }
rain_orderbook_common = { workspace = true }
rain_orderbook_app_settings = { workspace = true }
rain_orderbook_quote = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
rust-bigint = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ['env-filter'] }
comfy-table = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
rain-math-float.workspace = true
url.workspace = true
serde_json = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
flate2 = "1.0.34"
rusqlite = { version = "0.31", features = ["functions"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }

[dev-dependencies]
httpmock = "0.7.0"
rain-metadata = { workspace = true }
tempfile.workspace = true
rain_orderbook_test_fixtures = { workspace = true }
