[package]
name = "rain_orderbook_client"
description = "Rain Orderbook Client."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
alloy.workspace = true
rain_orderbook_subgraph_client.workspace = true
rain_orderbook_app_settings.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-utils.workspace = true
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }

[dev-dependencies]
httpmock = "0.7.0"
rain_orderbook_test_fixtures.workspace = true
