[package]
name = "rain_orderbook_common"
version = "0.0.1"
edition = "2021"
license = "CAL-1.0"
description = "Rain Orderbook CLI."
homepage = "https://github.com/rainprotocol/rain.orderbook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain_orderbook_bindings = { workspace = true }
rain_orderbook_subgraph_client = { workspace = true }
rain_orderbook_app_settings = { workspace = true }
alloy-primitives = { workspace = true }
alloy-ethers-typecast = { workspace = true }
alloy-sol-types = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-dyn-abi = { workspace = true }
reqwest = { workspace = true }
strict-yaml-rust = { workspace = true }
dotrain = { workspace = true }
dotrain-lsp = { workspace = true }
rain-metadata = { workspace = true }
rain-metaboard-subgraph = { workspace = true }
rain-metadata-bindings = { workspace = true }
rain_interpreter_bindings = { workspace = true }
rain_interpreter_dispair = { workspace = true }
rain_interpreter_parser = { workspace = true }
rain-interpreter-eval = { workspace = true }
rain-orderbook-env = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
proptest = { workspace = true }
typeshare = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = "0.8.5"
rain-error-decoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
