[package]
name = "rain_orderbook_common"
description = "Rain Orderbook CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
author.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rain_orderbook_bindings = { workspace = true }
rain_orderbook_subgraph_client = { workspace = true }
rain_orderbook_app_settings = { workspace = true }
alloy = { workspace = true, features = [ "dyn-abi", "rand" ] }
alloy-ethers-typecast = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
strict-yaml-rust = { workspace = true }
dotrain = { workspace = true }
dotrain-lsp = { workspace = true }
rain-metadata = { workspace = true }
rain-metaboard-subgraph = { workspace = true }
rain-metadata-bindings = { workspace = true }
rain_interpreter_bindings = { workspace = true }
rain_interpreter_dispair = { workspace = true }
rain_interpreter_parser = { workspace = true }
serde_bytes = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rain-error-decoding = { workspace = true }
rain-interpreter-eval = { workspace = true }
web-sys = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
proptest = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-utils = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"] }

[dev-dependencies]
httpmock = "0.7.0"
rain_orderbook_test_fixtures = { workspace = true }