[package]
name = "rain_orderbook_common"
description = "Rain Orderbook CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rain_orderbook_bindings = { workspace = true }
rain_orderbook_subgraph_client = { workspace = true }
rain_orderbook_app_settings = { workspace = true }
rain_orderbook_quote = { workspace = true }
alloy = { workspace = true, features = ["dyn-abi", "rand"] }
alloy-ethers-typecast = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
strict-yaml-rust = { workspace = true }
dotrain = { workspace = true }
dotrain-lsp = { workspace = true }
rain-metadata = { workspace = true }
rain-metaboard-subgraph = { workspace = true }
rain-metadata-bindings = { workspace = true }
rain_interpreter_bindings = { workspace = true }
rain_interpreter_dispair = { workspace = true }
rain_interpreter_parser = { workspace = true }
serde_bytes = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rain-error-decoding = { workspace = true }
rain-interpreter-eval = { workspace = true }
wasm-bindgen-utils = { workspace = true }
eyre.workspace = true
rain-math-float.workspace = true
tower.workspace = true
backon = "0.4.4"
flate2 = "1.0.34"
itertools = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
proptest = { workspace = true }
alloy = { workspace = true, features = ["signer-ledger"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
serde-wasm-bindgen = "0.4"
getrandom = { workspace = true }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
httpmock = "0.7.0"
rain_orderbook_test_fixtures = { workspace = true }

[dev-dependencies]
rusqlite = "0.31.0"
