[package]
name = "rain_orderbook_integration_tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2.0", features = ["full", "node-bindings"] }
rain-orderbook-env = { workspace = true }
rain_orderbook_common = { workspace = true }
rain_orderbook_app_settings = { workspace = true }
alloy-sol-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
