[package]
name = "rain_orderbook_integration_tests"
version.workspace = true
edition.workspace = true
license.workspace = true
author.workspace = true
homepage.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { workspace = true }
rain_orderbook_test_fixtures = { workspace = true }
alloy = { workspace = true, features = ["full", "node-bindings"] }
rain_orderbook_common = { workspace = true }
serde_json = { workspace = true }
