[package]
name = "raindex_integration_tests"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { workspace = true }
raindex_app_settings = { workspace = true }
raindex_test_fixtures = { workspace = true }
alloy = { workspace = true, features = ["full", "node-bindings"] }
raindex_common = { workspace = true }
serde_json = { workspace = true }
rain-math-float.workspace = true
