[package]
name = "rain_orderbook_js_api"
description = "Javascript bindings for common functions accross the app."
version.workspace = true
edition.workspace = true
license.workspace = true
author.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
cynic = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
rain_orderbook_common = { workspace = true }
rain_orderbook_app_settings = { workspace = true }
rain_orderbook_subgraph_client = { workspace = true }
rain_orderbook_bindings = { workspace = true }
alloy-ethers-typecast = { workspace = true }
js-sys = { version = "0.3.69" }
wasm-bindgen = { version = "0.2.92" }
serde-wasm-bindgen = { version = "0.6.5" }
wasm-bindgen-futures = { version = "0.4.42" }
tsify = { version = "0.4.5", default-features = false, features = ["js", "wasm-bindgen"] }
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"] }
alloy = { workspace = true, features = [ "dyn-abi" ] }
flate2 = "1.0.34"
base64 = "0.22.1"
bincode = "1.3.3"
strict-yaml-rust = { workspace = true }
