[package]
name = "rain_orderbook_js_api"
description = "Javascript bindings for common functions accross the app."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
cynic = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
rain_orderbook_common = { workspace = true }
rain_orderbook_app_settings = { workspace = true }
rain_orderbook_subgraph_client = { workspace = true }
rain_orderbook_bindings = { workspace = true }
rain_orderbook_quote = { workspace = true }
alloy-ethers-typecast = { workspace = true }
wasm-bindgen-utils = { workspace = true }
wasm-bindgen = "0.2.95"
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"] }
alloy = { workspace = true, features = [ "dyn-abi" ] }
flate2 = "1.0.34"
base64 = "0.22.1"
bincode = "1.3.3"
anyhow = { workspace = true }
sha2 = "0.10.8"
strict-yaml-rust = { workspace = true }
url = { workspace = true, features = ["serde"] }
web-sys = { version = "0.3.77", features = ["Storage", "Window", "Location", "History", "UrlSearchParams"] }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
httpmock = "0.7.0"
