[package]
name = "rain_orderbook_math"
description = "Math toolings for Rain Orderbooks crates"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
alloy = { workspace = true, features = ["rand"] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = { version = "0.3.69" }
wasm-bindgen = { version = "0.2.92" }
serde-wasm-bindgen = { version = "0.6.5" }
getrandom = { version = "0.2.11", features = ["js", "js-sys"] }
tsify = { version = "0.4.5", default-features = false, features = ["js", "wasm-bindgen"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"
