[package]
name = "rain_orderbook_math"
description = "Math toolings for Rain Orderbooks crates"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
once_cell = { workspace = true }
alloy = { workspace = true, features = ["rand"] }
