[package]
name = "raindex_quote"
description = "Quote Raindex Orders"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
rain-math-float.workspace = true
rain-metadata = { workspace = true }
raindex_bindings = { workspace = true }
raindex_subgraph_client = { workspace = true }
futures = { workspace = true }
rain-error-decoding = { workspace = true }
alloy = { workspace = true, features = ["sol-types"] }
alloy-ethers-typecast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true, features = ["env"] }
tracing-subscriber = { workspace = true, features = ['env-filter'] }
wasm-bindgen-utils = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
rain-interpreter-eval = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
getrandom = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
httpmock = "0.7.0"

[dev-dependencies]
raindex_test_fixtures = { workspace = true }
raindex_common = { workspace = true }
wasm-bindgen-test = "0.3"
raindex_app_settings = { workspace = true }
tempfile.workspace = true
async-trait = "0.1"
